# underscore2space

./: .gitignore  Makefile  README.md  pyproject.toml
u2s/: main.py
